NMS-19176 : generate events rest point exposed.